; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/gl_scenes/extr_teapot.c_inc_and_clip_distance.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/gl_scenes/extr_teapot.c_inc_and_clip_distance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float)* @inc_and_clip_distance to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @inc_and_clip_distance(float %0, float %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  store float %0, float* %3, align 4
  store float %1, float* %4, align 4
  %5 = load float, float* %4, align 4
  %6 = load float, float* %3, align 4
  %7 = fadd float %6, %5
  store float %7, float* %3, align 4
  %8 = load float, float* %3, align 4
  %9 = fcmp oge float %8, 1.000000e+01
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store float 1.000000e+01, float* %3, align 4
  br label %16

11:                                               ; preds = %2
  %12 = load float, float* %3, align 4
  %13 = fcmp ole float %12, 1.000000e+00
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store float 1.000000e+00, float* %3, align 4
  br label %15

15:                                               ; preds = %14, %11
  br label %16

16:                                               ; preds = %15, %10
  %17 = load float, float* %3, align 4
  ret float %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
